Last styling changes for the day to prevent whole columns from wrapping.

--- a/style.css
+++ b/style.css
@@ -48,10 +48,10 @@ body {
     width: 50%;
     display: flex;
     margin: 30px;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     padding: 20px;
+    padding-right: 30px;
     margin-right: 0px;
     background-color: rgb(200, 252, 252);
     border-bottom-left-radius: 20px;
@@ -65,7 +65,6 @@ body {
     padding-right: 65px;
     margin: 30px;
     margin-left: 0px;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     background-color: rgb(200, 252, 252);
